--- a/Embeddings (2).ipynb
+++ b/Embeddings (2).ipynb
@@ -519,7 +519,7 @@
       "cell_type": "code",
       "source": [
         "import pinecone\n",
-        "pinecone.init(api_key=\"\", environment=\"us-west4-gcp-free\")"
+        "pinecone.init(api_key=\"removed API key for submission\", environment=\"us-west4-gcp-free\")"
       ],
       "metadata": {
         "id": "lSm2IPspTSGX"
